--- a/course/templates/course/teacher_course.html
+++ b/course/templates/course/teacher_course.html
@@ -74,7 +74,7 @@
     </main>
 
     <script >
-        const API_URL = 'http://localhost:8000/api'; // Your API endpoint
+        const API_URL = '{{ base_url }}/api'; // Your API endpoint
 let TOKEN = '';  // This will hold the JWT token after login
 
 // 1. Load Courses for the Teacher
