--- a/course/templates/course/login.html
+++ b/course/templates/course/login.html
@@ -189,7 +189,7 @@ document.getElementById('loginForm').addEventListener('submit', async function(e
 
     try {
         // Make API call to login
-        const response = await fetch('http://192.168.18.237:8000/api/login/', {
+        const response = await fetch('{{ base_url }}/api/login/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
